# rocketchat-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/client/: mod.rs  rocket_chat_client_call_builder.rs  rocket_chat_client_response.rs  rocket_chat_query_params.rs  rocket_chat_rest_api_v1.rs
src/client/tests/: client_tests.rs
src/model/: attachment.rs  attachment_field.rs  auth_data.rs  channel.rs  email.rs  emoji.rs  group.rs  integration.rs  integration_type.rs  message.rs  mod.rs  model_test.rs  room.rs  room_creator.rs  room_type.rs  server_build_info.rs  server_commit_info.rs  server_info.rs  setting.rs  user.rs  user_status.rs  user_type.rs
src/requests/: channel_history_request.rs  create_user_request.rs  mod.rs  room_and_user_request.rs  room_create_request.rs  room_id_request.rs  update_user_request.rs  user_id_request.rs
src/utils/: http_methods.rs  json.rs  mod.rs
