[package]
name = "rocketchat-rust"
version = "0.1.0"
authors = ["Maximilian Schreiter"]
license-file = "LICENSE"
keywords = ["rocketchat", "api", "http"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
emojis = "0.6.1"
env_logger = "0.10.0"
reqwest = { version = "0.11.22", features = ["json", ] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
